--- a/res/color/i_selector_base.xml
+++ b/res/color/i_selector_base.xml
@@ -4,6 +4,6 @@
     <item android:state_enabled="false" android:color="#fff"/>
     <item android:state_focused="true" android:color="#FFF"/>
     <item android:state_pressed="true" android:color="#FFF"/>
-    <item android:color="@color/gray"/>
+    <item android:color="#fff"/>
 
 </selector>
